Add new documentation for 0.1 release